<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_navigation_favorite"
        android:title="@string/bar_favorite_label"
        android:icon="@drawable/baseline_star_24"/>

    <item
        android:id="@+id/bottom_navigation_edit"
        android:title="@string/bar_edit_label"
        android:icon="@drawable/outline_edit_24"/>

    <item
        android:id="@+id/bottom_navigation_share"
        android:title="@string/bar_share_label"
        android:icon="@drawable/outline_share_24"/>

    <item
        android:id="@+id/bottom_navigation_menu"
        android:title="@string/bar_more_label"
        android:icon="@drawable/outline_more_vert_24"/>
</menu>